logo3dParser.py
# Generated from logo3d.g4 by ANTLR 4.9
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class logo3dParser ( Parser ):

    grammarFileName = "logo3d.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "','", "'('", "')'", "'+'", "'-'", "'*'", 
                     "'/'", "'^'", "'>>'", "'<<'", "'=='", "'>'", "'<'", 
                     "'>='", "'<='", "'!='", "':='", "'IF'", "'WHILE'", 
                     "'main()'", "'PROC'", "'FOR'", "'FROM'", "'TO'", "'DO'", 
                     "'IS'", "'ELSE'", "'THEN'", "'color'", "'forward'", 
                     "'backward'", "'left'", "'right'", "'up'", "'down'", 
                     "'home()'", "'hide()'", "'show()'", "'END'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "SUM", "SUB", "MULT", "DIV", "POT", "READ", "WRITE", 
                      "EQ", "GT", "LT", "GTE", "LTE", "DIF", "ASSIGN", "IF", 
                      "WHILE", "MAIN", "PROC", "FOR", "FROM", "TO", "DO", 
                      "IS", "ELSE", "THEN", "COLOR", "FORWARD", "BACKWARD", 
                      "LEFT", "RIGHT", "UP", "DOWN", "HOME", "HIDE", "SHOW", 
                      "END", "ID", "INT", "FLOAT", "COMMENT", "WS" ]

    RULE_root = 0
    RULE_args = 1
    RULE_call = 2
    RULE_expr = 3
    RULE_block = 4
    RULE_action = 5
    RULE_comp = 6
    RULE_integernumber = 7
    RULE_floatnumber = 8
    RULE_op = 9

    ruleNames =  [ "root", "args", "call", "expr", "block", "action", "comp", 
                   "integernumber", "floatnumber", "op" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    SUM=4
    SUB=5
    MULT=6
    DIV=7
    POT=8
    READ=9
    WRITE=10
    EQ=11
    GT=12
    LT=13
    GTE=14
    LTE=15
    DIF=16
    ASSIGN=17
    IF=18
    WHILE=19
    MAIN=20
    PROC=21
    FOR=22
    FROM=23
    TO=24
    DO=25
    IS=26
    ELSE=27
    THEN=28
    COLOR=29
    FORWARD=30
    BACKWARD=31
    LEFT=32
    RIGHT=33
    UP=34
    DOWN=35
    HOME=36
    HIDE=37
    SHOW=38
    END=39
    ID=40
    INT=41
    FLOAT=42
    COMMENT=43
    WS=44

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class RootContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(logo3dParser.EOF, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(logo3dParser.ExprContext)
            else:
                return self.getTypedRuleContext(logo3dParser.ExprContext,i)


        def getRuleIndex(self):
            return logo3dParser.RULE_root

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRoot" ):
                return visitor.visitRoot(self)
            else:
                return visitor.visitChildren(self)




    def root(self):

        localctx = logo3dParser.RootContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_root)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 21 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 20
                self.expr()
                self.state = 23 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << logo3dParser.MAIN) | (1 << logo3dParser.PROC) | (1 << logo3dParser.ID))) != 0)):
                    break

            self.state = 25
            self.match(logo3dParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def op(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(logo3dParser.OpContext)
            else:
                return self.getTypedRuleContext(logo3dParser.OpContext,i)


        def getRuleIndex(self):
            return logo3dParser.RULE_args

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArgs" ):
                return visitor.visitArgs(self)
            else:
                return visitor.visitChildren(self)




    def args(self):

        localctx = logo3dParser.ArgsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_args)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 35
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << logo3dParser.T__1) | (1 << logo3dParser.SUM) | (1 << logo3dParser.SUB) | (1 << logo3dParser.ID) | (1 << logo3dParser.INT) | (1 << logo3dParser.FLOAT))) != 0):
                self.state = 27
                self.op(0)
                self.state = 32
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==logo3dParser.T__0:
                    self.state = 28
                    self.match(logo3dParser.T__0)
                    self.state = 29
                    self.op(0)
                    self.state = 34
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CallContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(logo3dParser.ID, 0)

        def args(self):
            return self.getTypedRuleContext(logo3dParser.ArgsContext,0)


        def MAIN(self):
            return self.getToken(logo3dParser.MAIN, 0)

        def getRuleIndex(self):
            return logo3dParser.RULE_call

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCall" ):
                return visitor.visitCall(self)
            else:
                return visitor.visitChildren(self)




    def call(self):

        localctx = logo3dParser.CallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_call)
        try:
            self.state = 43
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [logo3dParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 37
                self.match(logo3dParser.ID)
                self.state = 38
                self.match(logo3dParser.T__1)
                self.state = 39
                self.args()
                self.state = 40
                self.match(logo3dParser.T__2)
                pass
            elif token in [logo3dParser.MAIN]:
                self.enterOuterAlt(localctx, 2)
                self.state = 42
                self.match(logo3dParser.MAIN)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return logo3dParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class PROCContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a logo3dParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def PROC(self):
            return self.getToken(logo3dParser.PROC, 0)
        def ID(self):
            return self.getToken(logo3dParser.ID, 0)
        def args(self):
            return self.getTypedRuleContext(logo3dParser.ArgsContext,0)

        def IS(self):
            return self.getToken(logo3dParser.IS, 0)
        def block(self):
            return self.getTypedRuleContext(logo3dParser.BlockContext,0)

        def END(self):
            return self.getToken(logo3dParser.END, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPROC" ):
                return visitor.visitPROC(self)
            else:
                return visitor.visitChildren(self)


    class MAINContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a logo3dParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def PROC(self):
            return self.getToken(logo3dParser.PROC, 0)
        def MAIN(self):
            return self.getToken(logo3dParser.MAIN, 0)
        def IS(self):
            return self.getToken(logo3dParser.IS, 0)
        def block(self):
            return self.getTypedRuleContext(logo3dParser.BlockContext,0)

        def END(self):
            return self.getToken(logo3dParser.END, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMAIN" ):
                return visitor.visitMAIN(self)
            else:
                return visitor.visitChildren(self)


    class CALLPROCContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a logo3dParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def call(self):
            return self.getTypedRuleContext(logo3dParser.CallContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCALLPROC" ):
                return visitor.visitCALLPROC(self)
            else:
                return visitor.visitChildren(self)



    def expr(self):

        localctx = logo3dParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_expr)
        try:
            self.state = 61
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                localctx = logo3dParser.CALLPROCContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 45
                self.call()
                pass

            elif la_ == 2:
                localctx = logo3dParser.MAINContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 46
                self.match(logo3dParser.PROC)
                self.state = 47
                self.match(logo3dParser.MAIN)
                self.state = 48
                self.match(logo3dParser.IS)
                self.state = 49
                self.block()
                self.state = 50
                self.match(logo3dParser.END)
                pass

            elif la_ == 3:
                localctx = logo3dParser.PROCContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 52
                self.match(logo3dParser.PROC)
                self.state = 53
                self.match(logo3dParser.ID)
                self.state = 54
                self.match(logo3dParser.T__1)
                self.state = 55
                self.args()
                self.state = 56
                self.match(logo3dParser.T__2)
                self.state = 57
                self.match(logo3dParser.IS)
                self.state = 58
                self.block()
                self.state = 59
                self.match(logo3dParser.END)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def action(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(logo3dParser.ActionContext)
            else:
                return self.getTypedRuleContext(logo3dParser.ActionContext,i)


        def getRuleIndex(self):
            return logo3dParser.RULE_block

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = logo3dParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 63
                self.action()
                self.state = 66 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << logo3dParser.READ) | (1 << logo3dParser.WRITE) | (1 << logo3dParser.IF) | (1 << logo3dParser.WHILE) | (1 << logo3dParser.MAIN) | (1 << logo3dParser.FOR) | (1 << logo3dParser.COLOR) | (1 << logo3dParser.FORWARD) | (1 << logo3dParser.BACKWARD) | (1 << logo3dParser.LEFT) | (1 << logo3dParser.RIGHT) | (1 << logo3dParser.UP) | (1 << logo3dParser.DOWN) | (1 << logo3dParser.HOME) | (1 << logo3dParser.HIDE) | (1 << logo3dParser.SHOW) | (1 << logo3dParser.ID))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ActionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return logo3dParser.RULE_action

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class DOWNContext(ActionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a logo3dParser.ActionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def DOWN(self):
            return self.getToken(logo3dParser.DOWN, 0)
        def op(self):
            return self.getTypedRuleContext(logo3dParser.OpContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDOWN" ):
                return visitor.visitDOWN(self)
            else:
                return visitor.visitChildren(self)


    class BACKWARDContext(ActionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a logo3dParser.ActionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def BACKWARD(self):
            return self.getToken(logo3dParser.BACKWARD, 0)
        def op(self):
            return self.getTypedRuleContext(logo3dParser.OpContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBACKWARD" ):
                return visitor.visitBACKWARD(self)
            else:
                return visitor.visitChildren(self)


    class HIDEContext(ActionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a logo3dParser.ActionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def HIDE(self):
            return self.getToken(logo3dParser.HIDE, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitHIDE" ):
                return visitor.visitHIDE(self)
            else:
                return visitor.visitChildren(self)


    class LEFTContext(ActionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a logo3dParser.ActionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LEFT(self):
            return self.getToken(logo3dParser.LEFT, 0)
        def op(self):
            return self.getTypedRuleContext(logo3dParser.OpContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLEFT" ):
                return visitor.visitLEFT(self)
            else:
                return visitor.visitChildren(self)


    class FORContext(ActionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a logo3dParser.ActionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def FOR(self):
            return self.getToken(logo3dParser.FOR, 0)
        def ID(self):
            return self.getToken(logo3dParser.ID, 0)
        def FROM(self):
            return self.getToken(logo3dParser.FROM, 0)
        def op(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(logo3dParser.OpContext)
            else:
                return self.getTypedRuleContext(logo3dParser.OpContext,i)

        def TO(self):
            return self.getToken(logo3dParser.TO, 0)
        def DO(self):
            return self.getToken(logo3dParser.DO, 0)
        def block(self):
            return self.getTypedRuleContext(logo3dParser.BlockContext,0)

        def END(self):
            return self.getToken(logo3dParser.END, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFOR" ):
                return visitor.visitFOR(self)
            else:
                return visitor.visitChildren(self)


    class FORWARDContext(ActionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a logo3dParser.ActionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def FORWARD(self):
            return self.getToken(logo3dParser.FORWARD, 0)
        def op(self):
            return self.getTypedRuleContext(logo3dParser.OpContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFORWARD" ):
                return visitor.visitFORWARD(self)
            else:
                return visitor.visitChildren(self)


    class ASSIGNContext(ActionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a logo3dParser.ActionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(logo3dParser.ID, 0)
        def ASSIGN(self):
            return self.getToken(logo3dParser.ASSIGN, 0)
        def op(self):
            return self.getTypedRuleContext(logo3dParser.OpContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitASSIGN" ):
                return visitor.visitASSIGN(self)
            else:
                return visitor.visitChildren(self)


    class WRITEContext(ActionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a logo3dParser.ActionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def WRITE(self):
            return self.getToken(logo3dParser.WRITE, 0)
        def op(self):
            return self.getTypedRuleContext(logo3dParser.OpContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWRITE" ):
                return visitor.visitWRITE(self)
            else:
                return visitor.visitChildren(self)


    class READContext(ActionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a logo3dParser.ActionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def READ(self):
            return self.getToken(logo3dParser.READ, 0)
        def ID(self):
            return self.getToken(logo3dParser.ID, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitREAD" ):
                return visitor.visitREAD(self)
            else:
                return visitor.visitChildren(self)


    class COLORContext(ActionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a logo3dParser.ActionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def COLOR(self):
            return self.getToken(logo3dParser.COLOR, 0)
        def op(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(logo3dParser.OpContext)
            else:
                return self.getTypedRuleContext(logo3dParser.OpContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCOLOR" ):
                return visitor.visitCOLOR(self)
            else:
                return visitor.visitChildren(self)


    class RIGHTContext(ActionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a logo3dParser.ActionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def RIGHT(self):
            return self.getToken(logo3dParser.RIGHT, 0)
        def op(self):
            return self.getTypedRuleContext(logo3dParser.OpContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRIGHT" ):
                return visitor.visitRIGHT(self)
            else:
                return visitor.visitChildren(self)


    class WHILEContext(ActionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a logo3dParser.ActionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def WHILE(self):
            return self.getToken(logo3dParser.WHILE, 0)
        def comp(self):
            return self.getTypedRuleContext(logo3dParser.CompContext,0)

        def DO(self):
            return self.getToken(logo3dParser.DO, 0)
        def block(self):
            return self.getTypedRuleContext(logo3dParser.BlockContext,0)

        def END(self):
            return self.getToken(logo3dParser.END, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWHILE" ):
                return visitor.visitWHILE(self)
            else:
                return visitor.visitChildren(self)


    class CALLACTIONContext(ActionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a logo3dParser.ActionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def call(self):
            return self.getTypedRuleContext(logo3dParser.CallContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCALLACTION" ):
                return visitor.visitCALLACTION(self)
            else:
                return visitor.visitChildren(self)


    class UPContext(ActionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a logo3dParser.ActionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def UP(self):
            return self.getToken(logo3dParser.UP, 0)
        def op(self):
            return self.getTypedRuleContext(logo3dParser.OpContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUP" ):
                return visitor.visitUP(self)
            else:
                return visitor.visitChildren(self)


    class SHOWContext(ActionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a logo3dParser.ActionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def SHOW(self):
            return self.getToken(logo3dParser.SHOW, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSHOW" ):
                return visitor.visitSHOW(self)
            else:
                return visitor.visitChildren(self)


    class IFContext(ActionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a logo3dParser.ActionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IF(self):
            return self.getToken(logo3dParser.IF, 0)
        def comp(self):
            return self.getTypedRuleContext(logo3dParser.CompContext,0)

        def THEN(self):
            return self.getToken(logo3dParser.THEN, 0)
        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(logo3dParser.BlockContext)
            else:
                return self.getTypedRuleContext(logo3dParser.BlockContext,i)

        def END(self):
            return self.getToken(logo3dParser.END, 0)
        def ELSE(self):
            return self.getToken(logo3dParser.ELSE, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIF" ):
                return visitor.visitIF(self)
            else:
                return visitor.visitChildren(self)


    class HOMEContext(ActionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a logo3dParser.ActionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def HOME(self):
            return self.getToken(logo3dParser.HOME, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitHOME" ):
                return visitor.visitHOME(self)
            else:
                return visitor.visitChildren(self)



    def action(self):

        localctx = logo3dParser.ActionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_action)
        self._la = 0 # Token type
        try:
            self.state = 144
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                localctx = logo3dParser.ASSIGNContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 68
                self.match(logo3dParser.ID)
                self.state = 69
                self.match(logo3dParser.ASSIGN)
                self.state = 70
                self.op(0)
                pass

            elif la_ == 2:
                localctx = logo3dParser.WRITEContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 71
                self.match(logo3dParser.WRITE)
                self.state = 72
                self.op(0)
                pass

            elif la_ == 3:
                localctx = logo3dParser.IFContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 73
                self.match(logo3dParser.IF)
                self.state = 74
                self.comp()
                self.state = 75
                self.match(logo3dParser.THEN)
                self.state = 76
                self.block()
                self.state = 79
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==logo3dParser.ELSE:
                    self.state = 77
                    self.match(logo3dParser.ELSE)
                    self.state = 78
                    self.block()


                self.state = 81
                self.match(logo3dParser.END)
                pass

            elif la_ == 4:
                localctx = logo3dParser.WHILEContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 83
                self.match(logo3dParser.WHILE)
                self.state = 84
                self.comp()
                self.state = 85
                self.match(logo3dParser.DO)
                self.state = 86
                self.block()
                self.state = 87
                self.match(logo3dParser.END)
                pass

            elif la_ == 5:
                localctx = logo3dParser.FORContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 89
                self.match(logo3dParser.FOR)
                self.state = 90
                self.match(logo3dParser.ID)
                self.state = 91
                self.match(logo3dParser.FROM)
                self.state = 92
                self.op(0)
                self.state = 93
                self.match(logo3dParser.TO)
                self.state = 94
                self.op(0)
                self.state = 95
                self.match(logo3dParser.DO)
                self.state = 96
                self.block()
                self.state = 97
                self.match(logo3dParser.END)
                pass

            elif la_ == 6:
                localctx = logo3dParser.READContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 99
                self.match(logo3dParser.READ)
                self.state = 100
                self.match(logo3dParser.ID)
                pass

            elif la_ == 7:
                localctx = logo3dParser.COLORContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 101
                self.match(logo3dParser.COLOR)
                self.state = 102
                self.match(logo3dParser.T__1)
                self.state = 103
                self.op(0)
                self.state = 104
                self.match(logo3dParser.T__0)
                self.state = 105
                self.op(0)
                self.state = 106
                self.match(logo3dParser.T__0)
                self.state = 107
                self.op(0)
                self.state = 108
                self.match(logo3dParser.T__2)
                pass

            elif la_ == 8:
                localctx = logo3dParser.FORWARDContext(self, localctx)
                self.enterOuterAlt(localctx, 8)
                self.state = 110
                self.match(logo3dParser.FORWARD)
                self.state = 111
                self.match(logo3dParser.T__1)
                self.state = 112
                self.op(0)
                self.state = 113
                self.match(logo3dParser.T__2)
                pass

            elif la_ == 9:
                localctx = logo3dParser.BACKWARDContext(self, localctx)
                self.enterOuterAlt(localctx, 9)
                self.state = 115
                self.match(logo3dParser.BACKWARD)
                self.state = 116
                self.match(logo3dParser.T__1)
                self.state = 117
                self.op(0)
                self.state = 118
                self.match(logo3dParser.T__2)
                pass

            elif la_ == 10:
                localctx = logo3dParser.LEFTContext(self, localctx)
                self.enterOuterAlt(localctx, 10)
                self.state = 120
                self.match(logo3dParser.LEFT)
                self.state = 121
                self.match(logo3dParser.T__1)
                self.state = 122
                self.op(0)
                self.state = 123
                self.match(logo3dParser.T__2)
                pass

            elif la_ == 11:
                localctx = logo3dParser.RIGHTContext(self, localctx)
                self.enterOuterAlt(localctx, 11)
                self.state = 125
                self.match(logo3dParser.RIGHT)
                self.state = 126
                self.match(logo3dParser.T__1)
                self.state = 127
                self.op(0)
                self.state = 128
                self.match(logo3dParser.T__2)
                pass

            elif la_ == 12:
                localctx = logo3dParser.UPContext(self, localctx)
                self.enterOuterAlt(localctx, 12)
                self.state = 130
                self.match(logo3dParser.UP)
                self.state = 131
                self.match(logo3dParser.T__1)
                self.state = 132
                self.op(0)
                self.state = 133
                self.match(logo3dParser.T__2)
                pass

            elif la_ == 13:
                localctx = logo3dParser.DOWNContext(self, localctx)
                self.enterOuterAlt(localctx, 13)
                self.state = 135
                self.match(logo3dParser.DOWN)
                self.state = 136
                self.match(logo3dParser.T__1)
                self.state = 137
                self.op(0)
                self.state = 138
                self.match(logo3dParser.T__2)
                pass

            elif la_ == 14:
                localctx = logo3dParser.HOMEContext(self, localctx)
                self.enterOuterAlt(localctx, 14)
                self.state = 140
                self.match(logo3dParser.HOME)
                pass

            elif la_ == 15:
                localctx = logo3dParser.HIDEContext(self, localctx)
                self.enterOuterAlt(localctx, 15)
                self.state = 141
                self.match(logo3dParser.HIDE)
                pass

            elif la_ == 16:
                localctx = logo3dParser.SHOWContext(self, localctx)
                self.enterOuterAlt(localctx, 16)
                self.state = 142
                self.match(logo3dParser.SHOW)
                pass

            elif la_ == 17:
                localctx = logo3dParser.CALLACTIONContext(self, localctx)
                self.enterOuterAlt(localctx, 17)
                self.state = 143
                self.call()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CompContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return logo3dParser.RULE_comp

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class DIFContext(CompContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a logo3dParser.CompContext
            super().__init__(parser)
            self.copyFrom(ctx)
